--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,9 @@
 <!-- Create your form here -->
+<%= form_tag students_path do %>
+  <label>First Name</label><br>
+  <%= text_field_tag :'student[first_name]' %>
+  <label>Last Name</label><br>
+  <%= text_field_tag :'student[last_name]' %>
+
+  <input type="submit" value="Submit Student">
+<% end %>
